dang nhap dang ky

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.mail.password=f6deca7ec01422
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
+app.jwt.secret=ThisIsASecretKeyForJWTGeneration_ChangeMe123456789
+app.jwt.expiration-ms=86400000
+logging.level.org.springframework.security=DEBUG
 
 
 
