--- a/src/frontend/.gitignore
+++ b/src/frontend/.gitignore
@@ -33,3 +33,35 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Node dependencies
+node_modules/
+
+# Build output
+.next/
+out/
+build/
+dist/
+.cache/
+.turbo/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor files
+.idea/
+.vscode/
+*.swp
+
+# OS
+.DS_Store
+Thumbs.db
