tich hop cong thanh toan sepay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,12 @@ app.jwt.expiration-ms=86400000
 
 logging.level.org.springframework.security=DEBUG
 
+# --- SePay Configuration ---
+sepay.merchant-id=SP-TEST-LM76B74B
+sepay.secret-key=spsk_test_AUq3SEFB3PKAjM1VoivHPAoE2GE884mr
+sepay.api-url=https://api-staging.sepay.vn/v2/payment-qr
+
+
 
 
 server.port=8080
