--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
 spring.application.name=WEB_TMDT
 
-spring.datasource.url=jdbc:mysql://localhost:3306/web_tmdt
+# Database config (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/web_tmdt?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=rootpw
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA/Hibernate config
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+# Allow app to start without DB (for demo)
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=0
+spring.datasource.hikari.connection-timeout=5000
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
