--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=WEB_TMDT
 
 # Database config (MySQL)
-spring.datasource.url=jdbc:mysql://localhost:3306/web_tmdt?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/web_tmdt
 spring.datasource.username=root
-spring.datasource.password=rootpw
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=
+
 
 # JPA/Hibernate config
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
