--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=WEB_TMDT
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/web_tmdt?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/web2?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
