--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.0",
-    "react-icons": "^4.12.0",
-    "swiper": "^11.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-to-print": "^3.2.0",
+    "swiper": "^11.0.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
