--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,9 +38,9 @@ ghtk.token=33JYFzorEnnzWRqDBpk2Qau78klgv1Eqe01Z4Xp
 ghtk.partner-code=YOUR_SHOP_CODE_HERE
 ghtk.pickup.name=Kho Ha Dong
 ghtk.pickup.address=So 10 To Huu
-ghtk.pickup.province=Hà N?i
-ghtk.pickup.district=Qu?n Hà ?ông
-ghtk.pickup.ward=Ph??ng M? Lao
+ghtk.pickup.province=Ha Noi
+ghtk.pickup.district=Quan Ha Dong
+ghtk.pickup.ward=Phuong Mo Lao
 ghtk.pickup.tel=0911222333
 
 
