thanh toan bang ma qr online

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,22 @@ sepay.merchant-id=SP-TEST-LM76B74B
 sepay.secret-key=spsk_test_AUq3SEFB3PKAjM1VoivHPAoE2GE884mr
 sepay.api-url=https://api-staging.sepay.vn/v2/payment-qr
 
+# Bank Account Info (for QR Code) - Using Real Account
+sepay.bank.code=MBBank
+sepay.bank.account.number=3333315012003
+sepay.bank.account.name=LE MINH VUONG
+
+# Virtual Account (backup, not working)
+# sepay.virtual.account.number=SBPAY5328490167
+
+# API Secret for webhook verification
+sepay.api.secret=spsk_test_AUq3SEFB3PKAjM1VoivHPAoE2GE884mr
+
+# Amount multiplier for QR code
+# VietQR API expects amount in actual VND (e.g., 30000 = 30,000 VND)
+# Keep as 1 to use the exact amount from database
+sepay.amount.multiplier=1
+
 
 
 
