--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-to-print": "^3.2.0",
+    "sonner": "^2.0.7",
     "swiper": "^11.0.0",
     "xlsx": "^0.18.5",
     "zustand": "^4.4.7"
