--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
 			<version>5.2.5</version>
 		</dependency>
 
+		<!-- Cloudinary for image upload -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.36.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
