Push lại file application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=WEB_TMDT
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/web2?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/web2?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
@@ -31,9 +31,21 @@ sepay.secret-key=spsk_test_AUq3SEFB3PKAjM1VoivHPAoE2GE884mr
 sepay.api-url=https://api-staging.sepay.vn/v2/payment-qr
 
 # Bank Account Info (for QR Code) - Using Real Account
+# Thay đổi thông tin tài khoản nhận tiền ở đây:
 sepay.bank.code=MBBank
 sepay.bank.account.number=3333315012003
 sepay.bank.account.name=LE MINH VUONG
+
+# Các ngân hàng hỗ trợ:
+# - MBBank (MB Bank)
+# - VCB (Vietcombank)
+# - TCB (Techcombank)
+# - ACB (ACB)
+# - VPBank (VPBank)
+# - Vietinbank
+# - BIDV
+# - Agribank
+# ... và nhiều ngân hàng khác
 
 # Virtual Account (backup, not working)
 # sepay.virtual.account.number=SBPAY5328490167
@@ -52,3 +64,21 @@ sepay.amount.multiplier=1
 
 
 server.port=8080
+
+# --- GHN (Giao Hàng Nhanh) Shipping Configuration ---
+ghn.api.url=https://dev-online-gateway.ghn.vn/shiip/public-api
+ghn.api.token=76016947-d1a8-11f0-a3d6-dac90fb956b5
+ghn.shop.id=198347
+ghn.pick.district.id=1485
+
+
+# --- Cloudinary Configuration ---
+# Cách 1: Dùng CLOUDINARY_URL (Khuyến nghị - Đơn giản và bảo mật)
+cloudinary.url=cloudinary://751297543476923:K0M-9VnoYv0U4B_UwMkdyUgyVEQ@dyi3zgja2
+
+# Cách 2: Hoặc dùng config riêng lẻ (backup)
+# cloudinary.cloud-name=dyi3zgja2
+# cloudinary.api-key=751297543476923
+# cloudinary.api-secret=K0M-9VnoYv0U4B_UwMkdyUgyVEQ
+
+cloudinary.upload-preset=ml_default
