--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "html5-qrcode": "^2.3.8",
     "next": "^14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
