--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=WEB_TMDT
 spring.datasource.url=jdbc:mysql://localhost:3306/web3?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull&readOnlyPropagatesToServer=false
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.hikari.read-only=false
 
 spring.jpa.show-sql=true
@@ -15,8 +15,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=2445387224441b
-spring.mail.password=f6deca7ec01422
+spring.mail.username=a3a5ead021ee6f
+spring.mail.password=15195e6e42add9
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
@@ -27,15 +27,15 @@ app.jwt.expiration-ms=86400000
 logging.level.org.springframework.security=DEBUG
 
 # --- SePay Configuration ---
-sepay.merchant-id=SP-TEST-LM76B74B
-sepay.secret-key=spsk_test_AUq3SEFB3PKAjM1VoivHPAoE2GE884mr
+sepay.merchant-id=SP-TEST-LQB926AA
+sepay.secret-key=spsk_test_G9NcwYj2Qd2HK32rWxLd9zazg38DQSUE
 sepay.api-url=https://api-staging.sepay.vn/v2/payment-qr
 
 # Bank Account Info (for QR Code) - Using Real Account
 # Thay đổi thông tin tài khoản nhận tiền ở đây:
 sepay.bank.code=MBBank
-sepay.bank.account.number=3333315012003
-sepay.bank.account.name=LE MINH VUONG
+sepay.bank.account.number=0971429103
+sepay.bank.account.name=LE BA QUANG
 
 # Các ngân hàng hỗ trợ:
 # - MBBank (MB Bank)
@@ -52,7 +52,7 @@ sepay.bank.account.name=LE MINH VUONG
 # sepay.virtual.account.number=SBPAY5328490167
 
 # API Secret for webhook verification
-sepay.api.secret=spsk_test_AUq3SEFB3PKAjM1VoivHPAoE2GE884mr
+sepay.api.secret=spsk_test_G9NcwYj2Qd2HK32rWxLd9zazg38DQSUE
 
 # Amount multiplier for QR code
 # VietQR API expects amount in actual VND (e.g., 30000 = 30,000 VND)
