--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=a3a5ead021ee6f
-spring.mail.password=15195e6e42add9
+spring.mail.username=2445387224441b
+spring.mail.password=f6deca7ec01422
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
@@ -34,8 +34,8 @@ sepay.api-url=https://api-staging.sepay.vn/v2/payment-qr
 # Bank Account Info (for QR Code) - Using Real Account
 # Thay đổi thông tin tài khoản nhận tiền ở đây:
 sepay.bank.code=MBBank
-sepay.bank.account.number=0971429103
-sepay.bank.account.name=LE BA QUANG
+sepay.bank.account.number=3333315012003
+sepay.bank.account.name=LE MINH VUONG
 
 # Các ngân hàng hỗ trợ:
 # - MBBank (MB Bank)
