--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=WEB_TMDT
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/web2?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull&readOnlyPropagatesToServer=false
+spring.datasource.url=jdbc:mysql://localhost:3306/web3?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull&readOnlyPropagatesToServer=false
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.hikari.read-only=false
 
 spring.jpa.show-sql=true
