--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.32</version>
-			<scope>provided</scope>
+<!--			<version>1.18.32</version>-->
+<!--			<scope>provided</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
