--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=WEB_TMDT
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/web3?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull&readOnlyPropagatesToServer=false
+spring.datasource.url=jdbc:mysql://localhost:3306/datn?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull&readOnlyPropagatesToServer=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Kienbear0709
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.hikari.read-only=false
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 
 
