--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,3 +80,13 @@ cloudinary.url=cloudinary://751297543476923:K0M-9VnoYv0U4B_UwMkdyUgyVEQ@dyi3zgja
 
 
 cloudinary.upload-preset=ml_default
+
+#socketio
+socketio.host=0.0.0.0
+socketio.port=9093
+socketio.bossCount=1
+socketio.workCount=100
+socketio.allowCustomRequests=true
+socketio.upgradeTimeout=10000
+socketio.pingTimeout=60000
+socketio.pingInterval=25000
