--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 			<version>1.36.0</version>
 		</dependency>
 
+        <dependency>
+            <groupId>com.corundumstudio.socketio</groupId>
+            <artifactId>netty-socketio</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
