--- a/.gitignore
+++ b/.gitignore
@@ -41,16 +41,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Misc
+# Environment files (IMPORTANT: contains secrets)
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-<<<<<<< HEAD
-src/main/resources/application.properties
-
-=======
-application.properties
->>>>>>> a141d188d0d4ed2ca71154c4693e31c17c3fd8f2
+# Misc
+ngrok.exe
