--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=WEB_TMDT
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/datn?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull&readOnlyPropagatesToServer=false
+spring.datasource.url=jdbc:mysql://localhost:3306/web_tmdt?createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull&readOnlyPropagatesToServer=false
 spring.datasource.username=root
-spring.datasource.password=Kienbear0709
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.hikari.read-only=false
